--- a/Charts/ChartTest.html
+++ b/Charts/ChartTest.html
@@ -10,19 +10,28 @@
 
     	<script>
     	var buyerData = {
-	labels : ["January","February","March","April","May","June"],
+	labels : ["30","40","50","60","70","80","90","00","10","20"],
 	datasets : [
 		{
 			fillColor : "rgba(172,194,132,0.4)",
 			strokeColor : "#ACC26D",
 			pointColor : "#fff",
 			pointStrokeColor : "#9DB86D",
-			data : [203,156,99,251,305,247]
+			data : [203,156,99,251,305,247,99,251,305,247]
+		},
+				{
+			fillColor : "rgba(172,194,10,0.4)",
+			strokeColor : "#ACC26D",
+			pointColor : "#fff",
+			pointStrokeColor : "#9DB86D",
+			data : [203,10,99,251,305,247,99,251,305,247]
 		}
 	]
 }
     var buyers = document.getElementById('buyers').getContext('2d');
     new Chart(buyers).Line(buyerData);
+
+
 		</script>
     </body>
 </html>
