--- a/BlackJackScript.html
+++ b/BlackJackScript.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>Chart.js demo</title>
+        <script src='Chart.min.js'></script>
+    </head>
+    
+
+
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.0.0-rc10.min.js"></script>
 
 <script>
@@ -32,3 +42,5 @@
     }
 });
         </script>
+
+        </html>
