fixed random error

--- a/ThousandBestLineChart.html
+++ b/ThousandBestLineChart.html
@@ -112,7 +112,7 @@ for (var i =1980;i<1990;i++){
 var nineY=0;
 var nineN=0;
 for (var i =1990;i<2000;i++){
-  nine += obj[i].Yes.Count;
+  nineY += obj[i].Yes.Count;
 }
 
 for (var i =1990;i<2000;i++){
