removing secret keys from github

--- a/BlackJackScript.html
+++ b/BlackJackScript.html
@@ -12,7 +12,7 @@
 
 <script>
         AWS.config.accessKeyId = 'AKIAJNZBFEQORVJAIXNA';
-        AWS.config.secretAccessKey = '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';
+        AWS.config.secretAccessKey = '';
         AWS.config.region = 'us-west-2';
 
         // create the AWS.Request object
