--- a/ThousandBestLineChart.html
+++ b/ThousandBestLineChart.html
@@ -16,7 +16,7 @@
 <script type="text/javascript">
   // See the Configuring section to configure credentials in the SDK
         AWS.config.accessKeyId = 'AKIAJNZBFEQORVJAIXNA';
-        AWS.config.secretAccessKey = 'uZiqn0kZEAmjMxiFOcaby4G2a+IgO1VKJTOxw92U';
+        AWS.config.secretAccessKey = '';
 
 		  // Configure your region
 		  AWS.config.region = 'us-west-2';
