Change Mpaa Charts to reflect only G through R ratings, not None

--- a/MpaaLineChart.html
+++ b/MpaaLineChart.html
@@ -54,21 +54,16 @@ var thirtiesG=0;
 var thirtiesPG=0;
 var thirtiesPG13=0;
 var thirtiesR=0;
-var thirtiesN=0;
-for (var i =1930;i<1940;i++){
+for (var i =1930;i<1931;i++){
   thirtiesG += obj[i].G.Count;
 }
-
-for (var i =1930;i<1940;i++){
-  thirtiesN += obj[i].None.Count;
-}
-for (var i =1930;i<1940;i++){
+for (var i =1930;i<1931;i++){
   thirtiesPG += obj[i].PG.Count;
 }
-for (var i =1930;i<1940;i++){
+for (var i =1930;i<1931;i++){
   thirtiesPG13 += obj[i].PG13.Count;
 }
-for (var i =1930;i<1940;i++){
+for (var i =1930;i<1931;i++){
   thirtiesR += obj[i].R.Count;
 }
 
@@ -76,24 +71,19 @@ var fourtiesG=0;
 var fourtiesPG=0;
 var fourtiesPG13=0;
 var fourtiesR=0;
-var fourtiesN=0;
-for (var i =1940;i<1950;i++){
+for (var i =1940;i<1941;i++){
   fourtiesG += obj[i].G.Count;
 }
 
-for (var i =1940;i<1950;i++){
-  fourtiesN += obj[i].None.Count;
-}
-
-for (var i =1940;i<1950;i++){
+for (var i =1940;i<1941;i++){
   fourtiesPG += obj[i].PG.Count;
 }
 
-for (var i =1940;i<1950;i++){
+for (var i =1940;i<1941;i++){
   fourtiesPG13 += obj[i].PG13.Count;
 }
 
-for (var i =1940;i<1950;i++){
+for (var i =1940;i<1941;i++){
   fourtiesR += obj[i].R.Count;
 }
 
@@ -101,24 +91,19 @@ var fiftiesG=0;
 var fiftiesPG=0;
 var fiftiesPG13=0;
 var fiftiesR=0;
-var fiftiesN=0;
-for (var i =1950;i<1960;i++){
+for (var i =1950;i<1951;i++){
   fiftiesG += obj[i].G.Count;
 }
 
-for (var i =1950;i<1960;i++){
-  fiftiesN += obj[i].None.Count;
-}
-
-for (var i =1950;i<1960;i++){
+for (var i =1950;i<1951;i++){
   fiftiesPG += obj[i].PG.Count;
 }
 
-for (var i =1950;i<1960;i++){
+for (var i =1950;i<1951;i++){
   fiftiesPG13 += obj[i].PG13.Count;
 }
 
-for (var i =1950;i<1960;i++){
+for (var i =1950;i<1951;i++){
   fiftiesR += obj[i].R.Count;
 }
 
@@ -126,22 +111,17 @@ var sixG=0;
 var sixPG=0;
 var sixPG13=0;
 var sixR=0;
-var sixN=0;
-for (var i =1960;i<1970;i++){
+for (var i =1960;i<1961;i++){
   sixG += obj[i].G.Count;
 }
 
-for (var i =1960;i<1970;i++){
-  sixN += obj[i].None.Count;
-}
-
-for (var i =1960;i<1970;i++){
+for (var i =1960;i<1961;i++){
   sixPG += obj[i].PG.Count;
 }
-for (var i =1960;i<1970;i++){
+for (var i =1960;i<1961;i++){
   sixPG13 += obj[i].PG13.Count;
 }
-for (var i =1960;i<1970;i++){
+for (var i =1960;i<1961;i++){
   sixR += obj[i].R.Count;
 }
 
@@ -149,23 +129,18 @@ var sevG=0;
 var sevPG=0;
 var sevPG13=0;
 var sevR=0;
-var sevN=0;
-for (var i =1970;i<1980;i++){
+for (var i =1970;i<1971;i++){
   sevG += obj[i].G.Count;
 }
 
-for (var i =1970;i<1980;i++){
-  sevN += obj[i].None.Count;
-}
-
-for (var i =1970;i<1980;i++){
+for (var i =1970;i<1971;i++){
   sevPG += obj[i].PG.Count;
 }
 
-for (var i =1970;i<1980;i++){
+for (var i =1970;i<1971;i++){
   sevPG13 += obj[i].PG13.Count;
 }
-for (var i =1970;i<1980;i++){
+for (var i =1970;i<1971;i++){
   sevR += obj[i].R.Count;
 }
 
@@ -173,25 +148,20 @@ var eightG=0;
 var eightPG=0;
 var eightPG13=0;
 var eightR=0;
-var eightN=0;
 
-for (var i =1980;i<1990;i++){
+for (var i =1980;i<1981;i++){
   eightG += obj[i].G.Count;
 }
 
-for (var i =1980;i<1990;i++){
-  eightN += obj[i].None.Count;
-}
-
-for (var i =1980;i<1990;i++){
+for (var i =1980;i<1981;i++){
   eightPG += obj[i].PG.Count;
 }
 
-for (var i =1980;i<1990;i++){
+for (var i =1980;i<1981;i++){
   eightPG13 += obj[i].PG13.Count;
 }
 
-for (var i =1980;i<1990;i++){
+for (var i =1980;i<1981;i++){
   eightR += obj[i].R.Count;
 }
 
@@ -199,25 +169,20 @@ var nineG=0;
 var ninePG=0;
 var ninePG13=0;
 var nineR=0;
-var nineN=0;
 
-for (var i =1990;i<2000;i++){
+for (var i =1990;i<1991;i++){
   nineG += obj[i].G.Count;
 }
 
-for (var i =1990;i<2000;i++){
-  nineN += obj[i].None.Count;
-}
-
-for (var i =1990;i<2000;i++){
+for (var i =1990;i<1991;i++){
   ninePG += obj[i].PG.Count;
 }
 
-for (var i =1990;i<2000;i++){
+for (var i =1990;i<1991;i++){
   ninePG13 += obj[i].PG13.Count;
 }
 
-for (var i =1990;i<2000;i++){
+for (var i =1990;i<1991;i++){
   nineR += obj[i].R.Count;
 }
 
@@ -225,24 +190,19 @@ var tenG=0;
 var tenPG=0;
 var tenPG13=0;
 var tenR=0;
-var tenN=0;
-for (var i =2000;i<2010;i++){
+for (var i =2000;i<2001;i++){
   tenG += obj[i].G.Count;
 }
 
-for (var i =2000;i<2010;i++){
-  tenN += obj[i].None.Count;
-}
-
-for (var i =2000;i<2010;i++){
+for (var i =2000;i<2001;i++){
   tenPG += obj[i].PG.Count;
 }
 
-for (var i =2000;i<2010;i++){
+for (var i =2000;i<2001;i++){
   tenPG13 += obj[i].PG13.Count;
 }
 
-for (var i =2000;i<2010;i++){
+for (var i =2000;i<2001;i++){
   tenR += obj[i].R.Count;
 }
 
@@ -250,24 +210,19 @@ var elG=0;
 var elPG=0;
 var elPG13=0;
 var elR=0;
-var elN=0;
-for (var i =2010;i<2015;i++){
+for (var i =2010;i<2011;i++){
   elG += obj[i].G.Count;
 }
 
-for (var i =2010;i<2015;i++){
-  elN += obj[i].None.Count;
-}
-
-for (var i =2010;i<2015;i++){
+for (var i =2010;i<2011;i++){
   elPG += obj[i].PG.Count;
 }
 
-for (var i =2010;i<2015;i++){
+for (var i =2010;i<2011;i++){
   elPG13 += obj[i].PG13.Count;
 }
 
-for (var i =2010;i<2015;i++){
+for (var i =2010;i<2011;i++){
   elR += obj[i].R.Count;
 }
 
@@ -294,17 +249,12 @@ for (var i =2010;i<2015;i++){
             fillColor : "rgba(0,204,0,0.5)",
             strokeColor : "rgba(0,204,0,1)",
             data : [thirtiesR,fourtiesR,fiftiesR,sixR,sevR,eightR,nineR,tenR,elR]
-    },
-      {
-            fillColor : "rgba(102,204,255,0.5)",
-            strokeColor : "rgba(102,204,255,1)",
-            data : [thirtiesN,fourtiesN,fiftiesN,sixN,sevN,eightN,nineN,tenN,elN]
     }
   ]
 }
 
     var mpaa = document.getElementById('mpaa').getContext('2d');
-    new Chart(mpaa).Bar(MpaaData);
+    new Chart(mpaa).Line(MpaaData);
 
 
   }
