--- a/MpaaBarCharts.html
+++ b/MpaaBarCharts.html
@@ -335,7 +335,7 @@ for (var i =2010;i<2011;i++){
     new Chart(ine).Bar(nineD);
 
 
-      var tenD = = {
+      var tenD = {
       labels : ["G","PG","PG13","R"],
       datasets : [
       {
